--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="author" content="Joaquin Guardado">
 
     <title>jQN | Full Stack Developer | UI Designer | CG Artist | Iphone Photographer</title>
+    <!-- FavIcon -->
+    <link rel="icon" type="image/png" href="http://www.betwinsouls.com/logo-16.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
