--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <meta name="description" content="Full Stack Developer with MEAN skills">
     <meta name="author" content="Joaquin Guardado">
 
-    <title>jQN | Full Stack Developer | UI Designer | CG Artist | Iphone Photographer</title>
+    <title>QN | Full Stack Developer | UI Designer | CG Artist | Iphone Photographer</title>
+
     <!-- FavIcon -->
-    <link rel="icon" type="image/png" href="http://www.betwinsouls.com/logo-16.png"/>
+    <link rel="shortcut icon" href="img/logo-24.ico" type="image/x-icon" />
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
